umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_issue142a.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 33
sum_formula: C27H2O
graph6: "]KO[@A?@OPA?O??`C??C?_???A??@I?????A??????__?A????C????_???G???AC????G????"
