umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_issue2082.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 17
bond_count: 18
sum_formula: C10N5O2
graph6: PiCOGC@?G?_@?H?C??GA@??G
