umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_s58_rcsb.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 28
sum_formula: C16BrF3N3O2S
graph6: Yp?GGC@AI??@?@??_?G?PQ??_?G???????????O?_??A???C????O?w?
